Interceptors finished